--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -2,3 +2,4 @@
 remote_user = ubuntu
 host_key_checking = False
 inventory = ./hosts/
+private_key_file = /home/massi/k8s-terraform-ansible-sample/terraform/devopsformation_k8s.pem
